# Project-Builder

./: .gitignore  BuildProject.h  CMakeLists.txt  README.md  build.sh  buildProject  compile.sh  compile_commands.json  init.sh  main.cpp  makefile
doc/: config
helpers/: helptext.help
include/: Header.h  colors.h  core.h  cpp.h  java.h
src/: CMakeLists.txt  core.cpp  cpp.cpp  java.cpp
src/core/: CMakeLists.txt  colors.h  core.cpp  core.h  flags.h
src/filetypes/: CMakeLists.txt
src/filetypes/cpp/: CppProject.cpp  CppProject.h  cpp.cpp  cpp.h
src/filetypes/java/: JavaProject.cpp  JavaProject.h  java.cpp  java.h
src/filetypes/python/: PythonProject.cpp  PythonProject.h
src/filetypes/template/: Project.cpp  Project.h  project.cpp  project.h
startup/: _buildProject.zsh  init.bash
